# macos-fat16-mount-blocker

./: .gitignore  CMakeLists.txt  FAT16MountBlocker-Info.plist.in  README.markdown
Base.lproj/: MainMenu.xib  Preferences.xib
CMake/: FindFUSE.cmake
FAT16MountBlocker.xcodeproj/: project.pbxproj
FAT16MountBlocker.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
FAT16MountBlocker.xcodeproj/xcshareddata/xcschemes/: Build FAT16 Mount Blocker DMG.xcscheme  FAT16MountBlocker.xcscheme
Source/: AppError.h  Arbitrator.h  Arbitrator.m  DiskArbitrationPrivateFunctions.h  FAT16MountBlockerAppController+Toolbar.h  FAT16MountBlockerAppController+Toolbar.m  FAT16MountBlockerAppController.m  FAT16MountBlocker_Prefix.pch
